<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/browseRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top app bar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/browseAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/browseToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/browse_title" />

    </com.google.android.material.appbar.AppBarLayout>

...
